xtra_p1out
PS C:\Users\krh52\Documents\datafun-01-getting-started> & C:/Users/krh52/AppData/Local/Programs/Python/Python310/python.exe -m pip install -U black    
Collecting black
  Downloading black-22.12.0-cp310-cp310-win_amd64.whl (1.2 MB)
     |████████████████████████████████| 1.2 MB 2.2 MB/s
Collecting click>=8.0.0
  Downloading click-8.1.3-py3-none-any.whl (96 kB)
     |████████████████████████████████| 96 kB 6.4 MB/s
Collecting pathspec>=0.9.0
  Downloading pathspec-0.10.3-py3-none-any.whl (29 kB)
Collecting platformdirs>=2
  Downloading platformdirs-2.6.2-py3-none-any.whl (14 kB)
Collecting mypy-extensions>=0.4.3
  Downloading mypy_extensions-0.4.3-py2.py3-none-any.whl (4.5 kB)
Collecting colorama
  Downloading colorama-0.4.6-py2.py3-none-any.whl (25 kB)
  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.
Successfully installed black-22.12.0 click-8.1.3 colorama-0.4.6 mypy-extensions-0.4.3 pathspec-0.10.3 platformdirs-2.6.2 tomli-2.0.1
WARNING: You are using pip version 21.2.4; however, version 22.3.1 is available.
You should consider upgrading via the 'C:\Users\krh52\AppData\Local\Programs\Python\Python310\python.exe -m pip install --upgrade pip' command.        
PS C:\Users\krh52\Documents\datafun-01-getting-started> & C:/Users/krh52/AppData/Local/Programs/Python/Python310/python.exe c:/Users/krh52/Documents/datafun-01-getting-started/xtra_p1.py
  File "c:\Users\krh52\Documents\datafun-01-getting-started\xtra_p1.py", line 47
    if user_choice == 'wolf', buddy_choice == 'snake':
                            ^
SyntaxError: invalid syntax
PS C:\Users\krh52\Documents\datafun-01-getting-started> & C:/Users/krh52/AppData/Local/Programs/Python/Python310/python.exe c:/Users/krh52/Documents/datafun-01-getting-started/xtra_p1.py

Hello, I'm Billy, your gamebot.
The wolf scares the eagle.
The eagle grabs the snake.
The snake bites the wolf.
I'll pick one and you pick one and we'll see who wins.

Choose "wolf", "eagle", or "snake":  wolfe

You said wolfe.
I said snake.

PS C:\Users\krh52\Documents\datafun-01-getting-started> & C:/Users/krh52/AppData/Local/Programs/Python/Python310/python.exe c:/Users/krh52/Documents/datafun-01-getting-started/xtra_p1.py

Hello, I'm Billy, your gamebot.
Let's play an animal guessing game!
The eagle grabs the snake.
The snake bites the wolf.
I'll pick one and you pick one and we'll see who wins.

Choose "wolf", "eagle", or "snake":  wolf

You said wolf.
I said snake.

You win
PS C:\Users\krh52\Documents\datafun-01-getting-started> & C:/Users/krh52/AppData/Local/Programs/Python/Python310/python.exe c:/Users/krh52/Documents/datafun-01-getting-started/xtra_p1.py

Hello, I'm Billy, your gamebot.
Let's play an animal guessing game!
The eagle grabs the snake.
The snake bites the wolf.
I'll pick one and you pick one and we'll see who wins.

Choose "wolf", "eagle", or "snake":  snake

You said snake.
I said wolf.

You win